# agentWeave

./: README.md  pyproject.toml  requirements.txt
agentweaver/: __init__.py
configs/: default.yaml  miniswe_litellm_registry.json  miniswe_swebench_vllm.yaml  pabb_weights.yaml  small_sanity.yaml  swebench_lite.yaml  synthetic.yaml  wafer_4x4.yaml  wafer_6x6.yaml  wafer_8x8.yaml
data/: README.md
scripts/: check_pr3_env.sh  launch_sglang.sh  launch_vllm_noprefix.sh  launch_vllm_prefix.sh  launch_vllm_timing_proxy_pr3.sh  profile_vllm_h100_prefill_decode.py  run_all_small.sh  run_astra_agentweaver.sh  run_astra_smoke.sh  run_gpu_baselines.sh  run_h100_profile.sh  run_h100_profile_noprefix.sh  run_h100_profile_pr2_v2.sh  run_h100_profile_prefix.sh  run_mini_swe_lite5_patchcap_pr3_v4.sh  run_mini_swe_multibranch_pr3.sh  run_mini_swe_multibranch_pr3_timed.sh  run_mini_swe_trace_pr3.sh  run_mini_swe_trace_pr3_timed.sh  run_multibranch_swe.sh  run_plots.sh  run_pr4_algo.sh  run_pr4_algo_v2.sh  run_pr4_algo_v3.sh  run_pr4_algo_v4.sh  run_pr4_algo_v5.sh  run_pr4_algo_v6.sh  run_pr4_algo_v7.sh  run_pr4_algo_v8.sh  run_real_agentlike_all_policies_pr2_v2.sh  run_sanity_trace.sh  run_simulation.sh  run_swebench_eval_pr3.sh  run_synthetic.sh  run_synthetic_h100calib_pr2_v2_1.sh  setup_pr3_miniswe_swebench.sh
tests/: test_acd_mapping.py  test_bes_scheduler.py  test_dag_builder.py  test_mini_swe_adapter.py  test_nisp.py  test_pabb_no_future_leakage.py  test_prompt_factory.py  test_prompt_segmenter.py  test_replay_synthetic.py  test_synthetic_expected_properties.py  (+1 more)
(+2576 files in other folders)
